# Phone-Manager

./: build.gradle.kts  gradle.properties
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CPUInfo.cpp  CPUInfo.h  DeviceName.cpp  DeviceName.h  GPUInfo.cpp  GetProp.cpp  GetProp.h  phoneinfo.cpp
app/src/main/java/apw/android/phonemanager/: BatteryActivity.kt  BatteryIndicator.kt  CPU.kt  CpuDataModel.kt  DeviceInfo.kt  GPU.kt  MainActivity.kt  PhoneInfo.kt  StorageActivity.kt
app/src/main/java/apw/android/phonemanager/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
